--- a/style.css
+++ b/style.css
@@ -78,6 +78,15 @@ body{
     margin-bottom: 20px;
 }
 
+.right .section {
+    margin-bottom: 10px;
+}
+
+.right .section-title {
+    font-size: 18px;
+    margin-bottom: 8px;
+}
+
 .section-title {
     color: rgba(1, 6, 2, 0.9);
     font-size: 18px;
@@ -138,7 +147,7 @@ body{
 
 .right{
     margin: 20px 0;
-    padding: 15px 0;
+    padding: 10px;
     background-color: rgba(192, 192, 158, 0.5);
     width: 300px;
     height: 80vh;
@@ -151,10 +160,54 @@ body{
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    overflow-y: auto;
 }
 
 .right:hover{
     transform: scale(1.05);
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6)
+}
 
+.skills-category {
+    margin-bottom: 8px;
+}
+
+.category-title {
+    color: rgba(1, 6, 2, 0.8);
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 2px;
+}
+
+.skills-text {
+    color: rgba(1, 6, 2, 0.7);
+    font-size: 14px;
+    line-height: 1.2;
+    margin-bottom: 4px;
+    text-align: justify;
+}
+
+.certification-item {
+    margin-bottom: 10px;
+}
+
+.cert-title {
+    color: rgba(1, 6, 2, 0.8);
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 1px;
+}
+
+.cert-provider {
+    color: rgba(1, 6, 2, 0.6);
+    font-size: 14px;
+    font-style: italic;
+    margin-bottom: 2px;
+}
+
+.cert-description {
+    color: rgba(1, 6, 2, 0.7);
+    font-size: 14px;
+    line-height: 1.2;
+    text-align: justify;
 }
